package com.cooksys.server.models;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@NoArgsConstructor
@Getter
@Setter
public class CompanyResponseDto {

    private String name;

    private String description;

}
